# wordlive

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  feature-plan.md  issues.md  mkdocs.yml  pyproject.toml  spec-checkpoint-diff.md  spec-linter.md  spec.md  wordlive-llm-ergonomics-feedback.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: advanced.md  agent-patterns.md  agents.md  cli.md  concepts.md  cookbook.md  design.md  errors.md  examples.md  getting-started.md  index.md  linting.md  mcp.md  python-api.md  tutorial.md
docs/stylesheets/: extra.css
examples/: README.md
examples/demos/: README.md  demo_agent_showcase.py  demo_regularize.py
examples/powershell/: Append-Note.ps1  Invoke-WordliveWithRetry.ps1  Show-Outline.ps1
examples/python/: append_note.py  fuzzy_replace.py  read_outline.py  snapshot_page.py
examples/sample/: build_messy_brief.py  build_quarterly_report.py  messy-brief.docx  quarterly-report.docx  wordlive.lint.json
mcpb/: README.md  manifest.json  pyproject.toml
mcpb/src/: server.py
scripts/: e2e_test.py  split_document.py
src/wordlive/: __init__.py  __main__.py  _anchors.py  _app.py  _charts.py  _checkpoint.py  _citations.py  _com.py  _comments.py  _document.py  _edit.py  _equations.py  _export.py  _fields.py  _findreplace.py  _format.py  _guide.py  _hyperlinks.py  _images.py  _index.py  _lint_profile.py  _linting.py  _linting_consistency.py  _linting_fields.py  _linting_finalization.py  _linting_headings.py  _linting_hyperlinks.py  _linting_layout.py  _linting_policy.py  _linting_typography.py  _lists.py  _markdown.py  _notes.py  _ops.py  _paths.py  _proofing.py  _properties.py  _revisions.py  _runs.py  _sections.py  (+13 more)
src/wordlive/_anchors/: __init__.py  _anchor_core.py  _anchor_format.py  _anchor_insert.py  _anchor_lists.py  _anchor_media.py  _anchor_read.py  _anchor_references.py  _base.py  _bookmarks.py  _chart_anchors.py  _content_controls.py  _equation_anchors.py  _headings.py  _helpers.py  _image_anchors.py  _paragraphs.py  _range.py  _refs.py  _shape_anchors.py
src/wordlive/_document/: __init__.py  _core.py  _editing.py  _persistence.py  _reading.py  _structure.py
src/wordlive/_skill/: SKILL.md
src/wordlive/_skill/wordlive-cli/: SKILL.md
src/wordlive/_skill/wordlive-mcp/: SKILL.md
src/wordlive/_skill/wordlive-python/: SKILL.md
src/wordlive/cli/: __init__.py  commands.py  main.py
src/wordlive/cli/commands/: __init__.py  _common.py  charts.py  comments.py  content_controls.py  document.py  edit.py  equations.py  images.py  insert.py  linting.py  lists.py  meta.py  metadata.py  persistence.py  read.py  references.py  revisions.py  sections.py  shapes.py  snapshot.py  styles.py  tables.py  theme.py
src/wordlive/mcp/: __init__.py  __main__.py  _commands.py  _common.py  _exec.py  _read.py  _snapshot.py  _worker.py  _write.py  server.py
tests/: conftest.py  test_anchors.py  test_append.py  test_block_insert.py  test_borders_shading_tabs.py  test_breaks.py  test_charts.py  test_checkpoint.py  test_citations.py  test_cli.py  test_comments.py  test_compose.py  test_content_control_create.py  test_content_control_restyle.py  test_cursor.py  test_delete_paragraph.py  test_dispatch_errors.py  test_e2e_cli.py  test_edit_scope.py  test_equations.py  test_export.py  test_export_smoke.py  test_fields.py  test_fields_read.py  test_findreplace.py  test_flourishes.py  test_footnotes.py  test_format_helpers.py  test_format_info.py  test_format_run.py  test_hyperlinks.py  test_images.py  test_images_out.py  test_index.py  test_introspection.py  test_linking.py  test_lint_profile.py  test_linting.py  test_lists.py  test_markdown.py  (+28 more)
