[project]
name = "wordlive"
version = "0.8.1"
description = "Drive a running Microsoft Word instance from Python — xlwings, but for Word, and LLM-friendly."
readme = "README.md"
authors = [
    { name = "Thomas.Villani", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "pywin32>=306 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-include-markdown-plugin>=6.2",
]

[project.scripts]
wordlive = "wordlive.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: requires a running Microsoft Word installation",
]
addopts = "-m 'not smoke'"

[tool.bumpversion]
current_version = "0.8.1"
allow_dirty = false
commit = true
message = "chore: release v{new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
sign_tags = false

# Update the [project] version only. The line-start anchor keeps the search
# from also matching this section's `current_version = "…"` line.
[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(?m)^version = "{current_version}"'
replace = 'version = "{new_version}"'
