[project]
name = "wordlive"
version = "0.18.0"
description = "Drive a running Microsoft Word instance from Python — xlwings, but for Word, and LLM-friendly."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tom Villani, Ph.D.", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "word",
    "docx",
    "microsoft-word",
    "com",
    "pywin32",
    "automation",
    "llm",
    "agent",
    "mcp",
    "office",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "pywin32>=306 ; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/thomas-villani/wordlive"
Documentation = "https://thomas-villani.github.io/wordlive/"
Repository = "https://github.com/thomas-villani/wordlive"
Changelog = "https://github.com/thomas-villani/wordlive/blob/main/CHANGELOG.md"
Issues = "https://github.com/thomas-villani/wordlive/issues"

[project.optional-dependencies]
# Page/section rendering (`snapshot`): Word exports a PDF, PyMuPDF rasterises it.
snapshot = [
    "pymupdf>=1.24",
]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.8",
    "mypy>=1.13",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-include-markdown-plugin>=6.2",
]
mcp = [
    "mcp>=1.2",
]
# LaTeX equations (`insert_equation(latex=…)`): latex2mathml does the LaTeX→MathML
# hop; Office's own transform handles MathML→OMML, so this is the only extra dep.
latex = [
    "latex2mathml>=3.77",
]

[project.scripts]
wordlive = "wordlive.cli.main:main"
wordlive-mcp = "wordlive.mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Floor the uv version so an older uv can't regenerate uv.lock in a stale format
# (pre-`upload-time` metadata / older lock revision), which is what caused the
# lockfile to churn on every `uv run`. CI pins the exact uv (see ci.yml); this
# guards local contributors. Bump together with the CI pin when upgrading uv.
required-version = ">=0.11.17"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: requires a running Microsoft Word installation",
    "e2e: full CLI-subprocess lifecycle against live Word (implies smoke)",
]
addopts = "-m 'not smoke'"

[tool.bumpversion]
current_version = "0.18.0"
allow_dirty = false
commit = true
message = "chore: release v{new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
sign_tags = false

# Update the [project] version only. The line-start anchor keeps the search
# from also matching this section's `current_version = "…"` line.
[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(?m)^version = "{current_version}"'
replace = 'version = "{new_version}"'

# Keep the MCP bundle (mcpb/) in version lock-step with the package: the
# manifest's own version, the bundle pyproject's version, and its pin on the
# published package.
[[tool.bumpversion.files]]
filename = "mcpb/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "mcpb/pyproject.toml"
regex = true
search = '(?m)^version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "mcpb/pyproject.toml"
regex = true
search = 'wordlive\[mcp,snapshot\]>={current_version}'
replace = 'wordlive[mcp,snapshot]>={new_version}'

# Keep uv.lock's own `wordlive` package version in lock-step with the bump.
# bump-my-version only string-substitutes the files listed here, so without this
# entry a release leaves uv.lock pinning the old version and the next PR fails CI
# at `uv lock --locked`. The fixed-width lookbehind anchors on the package name
# so only the wordlive entry's version line is matched, never another package's.
[[tool.bumpversion.files]]
filename = "uv.lock"
regex = true
search = '(?<=name = "wordlive"\nversion = "){current_version}'
replace = '{new_version}'

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["site", "dist"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear.
select = ["E", "F", "W", "I", "UP", "B"]
# E501 (line length) is left to the formatter, which wraps code lines; this
# avoids nagging about long strings/comments the formatter won't break.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Bare attribute access inside `pytest.raises(...)` is the assertion — it
# triggers a lazy property that must raise. Not a useless expression.
"tests/**" = ["B018"]

[tool.mypy]
python_version = "3.10"
files = ["src/wordlive"]
warn_redundant_casts = true
warn_unused_ignores = false

# pywin32 ships no type stubs, and isn't installed off-Windows at all. This one
# override covers both cases: `import-not-found` on Linux CI (package absent)
# and `import-untyped` on Windows (present, but no stubs).
[[tool.mypy.overrides]]
module = ["pythoncom", "pywintypes", "win32com.*"]
ignore_missing_imports = true

# PyMuPDF is an optional extra (the `snapshot` feature) and isn't installed in
# the lint environment; its lazy `import pymupdf` / `import fitz` would otherwise
# trip import-not-found.
[[tool.mypy.overrides]]
module = ["pymupdf", "fitz"]
ignore_missing_imports = true

# The MCP SDK is an optional extra (the `mcp` server) and isn't installed in the
# lint environment; the server's lazy `from mcp.server.fastmcp import ...` (and
# `mcp.types`) would otherwise trip import-not-found. Same policy as snapshot.
[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
